# pascalfed

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  dummy.cpp  dummy2.cpp  dummy2.hpp
.cache/clangd/index/: dummy.cpp.7A968280CE0E9983.idx  dummy2.cpp.3610107174713990.idx  dummy2.hpp.D4296F271428DC93.idx  lex.cpp.DD7B079E0B192BAE.idx  lex.hpp.BE0B514C61AA339B.idx  parse-tree.hpp.6C790AD2AF2CA116.idx  parse_error.hpp.0D45E9D77CBB9833.idx  parser.cpp.C3D2E22590EC19D9.idx  parser.hpp.774FC587C09E1A47.idx  superutil.hpp.E0E9256DDD8F2F6F.idx  token.hpp.4F1749AD461ADB59.idx
conan/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-config-version.cmake  fmt-config.cmake  fmt-release-armv8-data.cmake
include/fed/diagnostics/: compile-error.hpp  internal-error.hpp
include/fed/parser/: parse_error.hpp  parser.hpp
include/fed/representations/: parse-tree.hpp  raw-source.hpp
include/fed/scanner/: lex.hpp  token.hpp
include/fed/utils/: superutil.hpp
lib/: CMakeLists.txt
lib/parser/: parser-declarations.cpp  parser.cpp
lib/representations/: raw-source.cpp
lib/scanner/: lex.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/frontend/: lexing.cpp
